src/main/grammar/TypeScript/TypeScriptParser.py
# Generated from TypeScriptParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TypeScriptParser ( Parser ):

    grammarFileName = "TypeScriptParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'export'", "'const'", "'type'", "'interface'", 
                     "'extends'", "'typeof'", "'string'", "'number'", "'boolean'", 
                     "'null'", "'unknown'", "'any'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "';'", "':'", "','", "'?'", "'|'", "'&'", 
                     "'='", "'<'", "'>'", "'{'", "'}'", "'['", "']'", "'('", 
                     "')'" ]

    symbolicNames = [ "<INVALID>", "Export", "Const", "Type", "Interface", 
                      "Extends", "Typeof", "StringType", "NumberType", "BooleanType", 
                      "NullType", "UnknownType", "AnyType", "StringLiteral", 
                      "IntegerLiteral", "Identifier", "Semi", "Colon", "Comma", 
                      "QuestionMark", "Pipe", "Ampersand", "Equals", "LessThan", 
                      "GreaterThan", "OpenBrace", "CloseBrace", "OpenBracket", 
                      "CloseBracket", "OpenParen", "CloseParen", "LineComment", 
                      "BlockComment", "WhiteSpace" ]

    RULE_typeScriptFile = 0
    RULE_declaration = 1
    RULE_constDeclaration = 2
    RULE_constValue = 3
    RULE_typeAliasDeclaration = 4
    RULE_interfaceDeclaration = 5
    RULE_extendsClause = 6
    RULE_typeExpression = 7
    RULE_unionType = 8
    RULE_intersectionType = 9
    RULE_arrayOrPrimaryType = 10
    RULE_primaryType = 11
    RULE_primitiveType = 12
    RULE_typeQuery = 13
    RULE_typeReference = 14
    RULE_typeArgumentList = 15
    RULE_typeArgument = 16
    RULE_objectType = 17
    RULE_memberSignature = 18
    RULE_indexSignature = 19
    RULE_propertySignature = 20
    RULE_propertyName = 21
    RULE_keywordAsIdentifier = 22

    ruleNames =  [ "typeScriptFile", "declaration", "constDeclaration", 
                   "constValue", "typeAliasDeclaration", "interfaceDeclaration", 
                   "extendsClause", "typeExpression", "unionType", "intersectionType", 
                   "arrayOrPrimaryType", "primaryType", "primitiveType", 
                   "typeQuery", "typeReference", "typeArgumentList", "typeArgument", 
                   "objectType", "memberSignature", "indexSignature", "propertySignature", 
                   "propertyName", "keywordAsIdentifier" ]

    EOF = Token.EOF
    Export=1
    Const=2
    Type=3
    Interface=4
    Extends=5
    Typeof=6
    StringType=7
    NumberType=8
    BooleanType=9
    NullType=10
    UnknownType=11
    AnyType=12
    StringLiteral=13
    IntegerLiteral=14
    Identifier=15
    Semi=16
    Colon=17
    Comma=18
    QuestionMark=19
    Pipe=20
    Ampersand=21
    Equals=22
    LessThan=23
    GreaterThan=24
    OpenBrace=25
    CloseBrace=26
    OpenBracket=27
    CloseBracket=28
    OpenParen=29
    CloseParen=30
    LineComment=31
    BlockComment=32
    WhiteSpace=33

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class TypeScriptFileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(TypeScriptParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TypeScriptParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(TypeScriptParser.DeclarationContext,i)


        def getRuleIndex(self):
            return TypeScriptParser.RULE_typeScriptFile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeScriptFile" ):
                listener.enterTypeScriptFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeScriptFile" ):
                listener.exitTypeScriptFile(self)




    def typeScriptFile(self):

        localctx = TypeScriptParser.TypeScriptFileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_typeScriptFile)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 46
                self.declaration()
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 52
            self.match(TypeScriptParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constDeclaration(self):
            return self.getTypedRuleContext(TypeScriptParser.ConstDeclarationContext,0)


        def typeAliasDeclaration(self):
            return self.getTypedRuleContext(TypeScriptParser.TypeAliasDeclarationContext,0)


        def interfaceDeclaration(self):
            return self.getTypedRuleContext(TypeScriptParser.InterfaceDeclarationContext,0)


        def getRuleIndex(self):
            return TypeScriptParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)




    def declaration(self):

        localctx = TypeScriptParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 57
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 54
                self.constDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 55
                self.typeAliasDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 56
                self.interfaceDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Export(self):
            return self.getToken(TypeScriptParser.Export, 0)

        def Const(self):
            return self.getToken(TypeScriptParser.Const, 0)

        def Identifier(self):
            return self.getToken(TypeScriptParser.Identifier, 0)

        def Equals(self):
            return self.getToken(TypeScriptParser.Equals, 0)

        def constValue(self):
            return self.getTypedRuleContext(TypeScriptParser.ConstValueContext,0)


        def Semi(self):
            return self.getToken(TypeScriptParser.Semi, 0)

        def Colon(self):
            return self.getToken(TypeScriptParser.Colon, 0)

        def typeExpression(self):
            return self.getTypedRuleContext(TypeScriptParser.TypeExpressionContext,0)


        def getRuleIndex(self):
            return TypeScriptParser.RULE_constDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstDeclaration" ):
                listener.enterConstDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstDeclaration" ):
                listener.exitConstDeclaration(self)




    def constDeclaration(self):

        localctx = TypeScriptParser.ConstDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_constDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(TypeScriptParser.Export)
            self.state = 60
            self.match(TypeScriptParser.Const)
            self.state = 61
            self.match(TypeScriptParser.Identifier)
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==17:
                self.state = 62
                self.match(TypeScriptParser.Colon)
                self.state = 63
                self.typeExpression()


            self.state = 66
            self.match(TypeScriptParser.Equals)
            self.state = 67
            self.constValue()
            self.state = 68
            self.match(TypeScriptParser.Semi)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def StringLiteral(self):
            return self.getToken(TypeScriptParser.StringLiteral, 0)

        def IntegerLiteral(self):
            return self.getToken(TypeScriptParser.IntegerLiteral, 0)

        def getRuleIndex(self):
            return TypeScriptParser.RULE_constValue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstValue" ):
                listener.enterConstValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstValue" ):
                listener.exitConstValue(self)




    def constValue(self):

        localctx = TypeScriptParser.ConstValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_constValue)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            _la = self._input.LA(1)
            if not(_la==13 or _la==14):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeAliasDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Export(self):
            return self.getToken(TypeScriptParser.Export, 0)

        def Type(self):
            return self.getToken(TypeScriptParser.Type, 0)

        def Identifier(self):
            return self.getToken(TypeScriptParser.Identifier, 0)

        def Equals(self):
            return self.getToken(TypeScriptParser.Equals, 0)

        def typeExpression(self):
            return self.getTypedRuleContext(TypeScriptParser.TypeExpressionContext,0)


        def Semi(self):
            return self.getToken(TypeScriptParser.Semi, 0)

        def getRuleIndex(self):
            return TypeScriptParser.RULE_typeAliasDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeAliasDeclaration" ):
                listener.enterTypeAliasDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeAliasDeclaration" ):
                listener.exitTypeAliasDeclaration(self)




    def typeAliasDeclaration(self):

        localctx = TypeScriptParser.TypeAliasDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_typeAliasDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(TypeScriptParser.Export)
            self.state = 73
            self.match(TypeScriptParser.Type)
            self.state = 74
            self.match(TypeScriptParser.Identifier)
            self.state = 75
            self.match(TypeScriptParser.Equals)
            self.state = 76
            self.typeExpression()
            self.state = 77
            self.match(TypeScriptParser.Semi)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InterfaceDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Export(self):
            return self.getToken(TypeScriptParser.Export, 0)

        def Interface(self):
            return self.getToken(TypeScriptParser.Interface, 0)

        def Identifier(self):
            return self.getToken(TypeScriptParser.Identifier, 0)

        def objectType(self):
            return self.getTypedRuleContext(TypeScriptParser.ObjectTypeContext,0)


        def extendsClause(self):
            return self.getTypedRuleContext(TypeScriptParser.ExtendsClauseContext,0)


        def getRuleIndex(self):
            return TypeScriptParser.RULE_interfaceDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInterfaceDeclaration" ):
                listener.enterInterfaceDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInterfaceDeclaration" ):
                listener.exitInterfaceDeclaration(self)




    def interfaceDeclaration(self):

        localctx = TypeScriptParser.InterfaceDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_interfaceDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(TypeScriptParser.Export)
            self.state = 80
            self.match(TypeScriptParser.Interface)
            self.state = 81
            self.match(TypeScriptParser.Identifier)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 82
                self.extendsClause()


            self.state = 85
            self.objectType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExtendsClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Extends(self):
            return self.getToken(TypeScriptParser.Extends, 0)

        def typeReference(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TypeScriptParser.TypeReferenceContext)
            else:
                return self.getTypedRuleContext(TypeScriptParser.TypeReferenceContext,i)


        def Comma(self, i:int=None):
            if i is None:
                return self.getTokens(TypeScriptParser.Comma)
            else:
                return self.getToken(TypeScriptParser.Comma, i)

        def getRuleIndex(self):
            return TypeScriptParser.RULE_extendsClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExtendsClause" ):
                listener.enterExtendsClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExtendsClause" ):
                listener.exitExtendsClause(self)




    def extendsClause(self):

        localctx = TypeScriptParser.ExtendsClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_extendsClause)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(TypeScriptParser.Extends)
            self.state = 88
            self.typeReference()
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==18:
                self.state = 89
                self.match(TypeScriptParser.Comma)
                self.state = 90
                self.typeReference()
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unionType(self):
            return self.getTypedRuleContext(TypeScriptParser.UnionTypeContext,0)


        def getRuleIndex(self):
            return TypeScriptParser.RULE_typeExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeExpression" ):
                listener.enterTypeExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeExpression" ):
                listener.exitTypeExpression(self)




    def typeExpression(self):

        localctx = TypeScriptParser.TypeExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_typeExpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.unionType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnionTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def intersectionType(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TypeScriptParser.IntersectionTypeContext)
            else:
                return self.getTypedRuleContext(TypeScriptParser.IntersectionTypeContext,i)


        def Pipe(self, i:int=None):
            if i is None:
                return self.getTokens(TypeScriptParser.Pipe)
            else:
                return self.getToken(TypeScriptParser.Pipe, i)

        def getRuleIndex(self):
            return TypeScriptParser.RULE_unionType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnionType" ):
                listener.enterUnionType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnionType" ):
                listener.exitUnionType(self)




    def unionType(self):

        localctx = TypeScriptParser.UnionTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_unionType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==20:
                self.state = 98
                self.match(TypeScriptParser.Pipe)


            self.state = 101
            self.intersectionType()
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==20:
                self.state = 102
                self.match(TypeScriptParser.Pipe)
                self.state = 103
                self.intersectionType()
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntersectionTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arrayOrPrimaryType(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TypeScriptParser.ArrayOrPrimaryTypeContext)
            else:
                return self.getTypedRuleContext(TypeScriptParser.ArrayOrPrimaryTypeContext,i)


        def Ampersand(self, i:int=None):
            if i is None:
                return self.getTokens(TypeScriptParser.Ampersand)
            else:
                return self.getToken(TypeScriptParser.Ampersand, i)

        def getRuleIndex(self):
            return TypeScriptParser.RULE_intersectionType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntersectionType" ):
                listener.enterIntersectionType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntersectionType" ):
                listener.exitIntersectionType(self)




    def intersectionType(self):

        localctx = TypeScriptParser.IntersectionTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_intersectionType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.arrayOrPrimaryType()
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==21:
                self.state = 110
                self.match(TypeScriptParser.Ampersand)
                self.state = 111
                self.arrayOrPrimaryType()
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayOrPrimaryTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primaryType(self):
            return self.getTypedRuleContext(TypeScriptParser.PrimaryTypeContext,0)


        def OpenBracket(self, i:int=None):
            if i is None:
                return self.getTokens(TypeScriptParser.OpenBracket)
            else:
                return self.getToken(TypeScriptParser.OpenBracket, i)

        def CloseBracket(self, i:int=None):
            if i is None:
                return self.getTokens(TypeScriptParser.CloseBracket)
            else:
                return self.getToken(TypeScriptParser.CloseBracket, i)

        def getRuleIndex(self):
            return TypeScriptParser.RULE_arrayOrPrimaryType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayOrPrimaryType" ):
                listener.enterArrayOrPrimaryType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayOrPrimaryType" ):
                listener.exitArrayOrPrimaryType(self)




    def arrayOrPrimaryType(self):

        localctx = TypeScriptParser.ArrayOrPrimaryTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_arrayOrPrimaryType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.primaryType()
            self.state = 122
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 118
                    self.match(TypeScriptParser.OpenBracket)
                    self.state = 119
                    self.match(TypeScriptParser.CloseBracket) 
                self.state = 124
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimaryTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitiveType(self):
            return self.getTypedRuleContext(TypeScriptParser.PrimitiveTypeContext,0)


        def StringLiteral(self):
            return self.getToken(TypeScriptParser.StringLiteral, 0)

        def typeQuery(self):
            return self.getTypedRuleContext(TypeScriptParser.TypeQueryContext,0)


        def typeReference(self):
            return self.getTypedRuleContext(TypeScriptParser.TypeReferenceContext,0)


        def objectType(self):
            return self.getTypedRuleContext(TypeScriptParser.ObjectTypeContext,0)


        def OpenParen(self):
            return self.getToken(TypeScriptParser.OpenParen, 0)

        def typeExpression(self):
            return self.getTypedRuleContext(TypeScriptParser.TypeExpressionContext,0)


        def CloseParen(self):
            return self.getToken(TypeScriptParser.CloseParen, 0)

        def getRuleIndex(self):
            return TypeScriptParser.RULE_primaryType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimaryType" ):
                listener.enterPrimaryType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimaryType" ):
                listener.exitPrimaryType(self)




    def primaryType(self):

        localctx = TypeScriptParser.PrimaryTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_primaryType)
        try:
            self.state = 134
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7, 8, 9, 10, 11, 12]:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.primitiveType()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self.match(TypeScriptParser.StringLiteral)
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 3)
                self.state = 127
                self.typeQuery()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 4)
                self.state = 128
                self.typeReference()
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 5)
                self.state = 129
                self.objectType()
                pass
            elif token in [29]:
                self.enterOuterAlt(localctx, 6)
                self.state = 130
                self.match(TypeScriptParser.OpenParen)
                self.state = 131
                self.typeExpression()
                self.state = 132
                self.match(TypeScriptParser.CloseParen)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimitiveTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def StringType(self):
            return self.getToken(TypeScriptParser.StringType, 0)

        def NumberType(self):
            return self.getToken(TypeScriptParser.NumberType, 0)

        def BooleanType(self):
            return self.getToken(TypeScriptParser.BooleanType, 0)

        def NullType(self):
            return self.getToken(TypeScriptParser.NullType, 0)

        def UnknownType(self):
            return self.getToken(TypeScriptParser.UnknownType, 0)

        def AnyType(self):
            return self.getToken(TypeScriptParser.AnyType, 0)

        def getRuleIndex(self):
            return TypeScriptParser.RULE_primitiveType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimitiveType" ):
                listener.enterPrimitiveType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimitiveType" ):
                listener.exitPrimitiveType(self)




    def primitiveType(self):

        localctx = TypeScriptParser.PrimitiveTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_primitiveType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 8064) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Typeof(self):
            return self.getToken(TypeScriptParser.Typeof, 0)

        def Identifier(self):
            return self.getToken(TypeScriptParser.Identifier, 0)

        def getRuleIndex(self):
            return TypeScriptParser.RULE_typeQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeQuery" ):
                listener.enterTypeQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeQuery" ):
                listener.exitTypeQuery(self)




    def typeQuery(self):

        localctx = TypeScriptParser.TypeQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_typeQuery)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(TypeScriptParser.Typeof)
            self.state = 139
            self.match(TypeScriptParser.Identifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeReferenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(TypeScriptParser.Identifier, 0)

        def LessThan(self):
            return self.getToken(TypeScriptParser.LessThan, 0)

        def typeArgumentList(self):
            return self.getTypedRuleContext(TypeScriptParser.TypeArgumentListContext,0)


        def GreaterThan(self):
            return self.getToken(TypeScriptParser.GreaterThan, 0)

        def getRuleIndex(self):
            return TypeScriptParser.RULE_typeReference

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeReference" ):
                listener.enterTypeReference(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeReference" ):
                listener.exitTypeReference(self)




    def typeReference(self):

        localctx = TypeScriptParser.TypeReferenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_typeReference)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(TypeScriptParser.Identifier)
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==23:
                self.state = 142
                self.match(TypeScriptParser.LessThan)
                self.state = 143
                self.typeArgumentList()
                self.state = 144
                self.match(TypeScriptParser.GreaterThan)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeArgumentListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeArgument(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TypeScriptParser.TypeArgumentContext)
            else:
                return self.getTypedRuleContext(TypeScriptParser.TypeArgumentContext,i)


        def Comma(self, i:int=None):
            if i is None:
                return self.getTokens(TypeScriptParser.Comma)
            else:
                return self.getToken(TypeScriptParser.Comma, i)

        def getRuleIndex(self):
            return TypeScriptParser.RULE_typeArgumentList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeArgumentList" ):
                listener.enterTypeArgumentList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeArgumentList" ):
                listener.exitTypeArgumentList(self)




    def typeArgumentList(self):
